--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "main": "index.js",
   "repository": "git@github.com:fsarachu/n-downloader.git",
   "author": "fsarachu <fsarachu@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+   "start": "node index.js"
+  },
+  "dependencies": {
+    "dotenv": "^8.1.0"
+  }
 }
