--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "fsarachu <fsarachu@gmail.com>",
   "license": "MIT",
   "scripts": {
-   "start": "node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^8.1.0"
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "shortid": "^2.2.15"
   }
 }
